@@ -1,10 +1,10 @@
 if MAINTENER_CODE
-maintener_programs = example07 example10
+maintener_programs = example10 
 endif
 
 EXTRA_DIST = Makefile.msvc
 
-noinst_PROGRAMS = example01 example02 example03 example04 example05 example06 example08 example09 example11 example12 example13 example14 example15 ${maintener_programs}
+noinst_PROGRAMS = example01 example02 example03 example04 example05 example06 example07 example08 example09 example11 example12 example13 example14 example15 ${maintener_programs}
 
 
 
@@ -39,7 +39,7 @@ example14_SOURCES = example14.cpp
 example15_SOURCES = example15.cpp
 
 
-AM_LDFLAGS = @LDFLAGS@ -L../curlpp/ -lcurlpp -static
+AM_LDFLAGS = -L../curlpp/ -lcurlpp -static 
 
-AM_CXXFLAGS=-I../ @CXXFLAGS@
+AM_CXXFLAGS=-I../ 
 
